# langgraph-basics

./: 1_Basics.ipynb  pyproject.toml
Notebooks/: 10_Generator_Evaluator.ipynb  11_Memory.ipynb  12_HumanInLoop.ipynb  1_First_Graph.ipynb  2_Pyndantic.ipynb  3_Message.ipynb  4_Prompts.ipynb  5_Tool_Binding.ipynb  6_ReAct_Agent.ipynb  7_Parallelization.ipynb  8_Routing_Workflow.ipynb  9_Orchestrator_Worker.ipynb
